product.layout align me fix

--- a/project/Mango.Web/Content/area_admin.css
+++ b/project/Mango.Web/Content/area_admin.css
@@ -46,7 +46,3 @@ textarea {
 .output {
     margin: 0 auto;
 }
-
-canvas {
-    border: 1px solid #ccc;
-}
