--- a/project/Mango.Web/Content/areas.css
+++ b/project/Mango.Web/Content/areas.css
@@ -24,10 +24,9 @@ h2 .btn { margin: 8px 10px;
     border-bottom: 1px solid #A9B3BC; 
 }
 
-.canvas-container {
-  margin-left: auto;
-  margin-right: auto;
-  }
+.canvas-panel { max-width: 536px;   margin-left: auto;
+  margin-right: auto; }
+
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
     background: #2C3E50;
     color: #fff;
@@ -79,3 +78,5 @@ h2 .btn { margin: 8px 10px;
     width: 100%;
     text-align: left;
 }
+
+
